# DataStructureCourseDesign

./: .gitignore  CMakeLists.txt  README.md
Homework/H1/: Project1.cpp
Homework/H1/exe/: [Unix]01_1850384_ZhuoZhengyi
Homework/H1/src/: makefile
Homework/H10/: Project10.cpp
Homework/H10/exe/: [Unix]10_1850384_ZhuoZhengyi
Homework/H10/src/: Project10.cpp  makefile
Homework/H2/: Project2.cpp
Homework/H2/exe/: [Linux]02_1850384_ZhuoZhengyi
Homework/H2/src/: Project2.cpp  makefile
Homework/H3/: P3  Project3.cpp
Homework/H3/exe/: [Linux]03_1850384_ZhuoZhengyi  [Unix]03_1850384_ZhuoZhengyi
Homework/H3/src/: Project3.cpp  makefile
Homework/H4/: Project4.cpp
Homework/H4/exe/: [Linux]04_1850384_ZhuoZhengyi  [Unix]04_1850384_ZhuoZhengyi
Homework/H4/src/: Project4.cpp  makefile
Homework/H5/: Project5.cpp
Homework/H5/src/: Project5.cpp  makefile
Homework/H6/: Project6.cpp
Homework/H6/exe/: [Linux]06_1850384_ZhuoZhengyi
Homework/H7/: Project7.cpp
Homework/H7/exe/: [Linux]07_1850384_ZhuoZhengyi
Homework/H7/src/: Project7.cpp
Homework/H8/: Project8.cpp
Homework/H8/src/: makefile
Homework/H9/: Project9.cpp
Homework/H9/exe/: [Linux]09_1850384_ZhuoZhengyi  [Unix]09_1850384_ZhuoZhengyi
MyDS/: BigInteger.cpp  BigInteger.h  HashMap.cpp  HashMap.h  HashTable.cpp  HashTable.h  HuffmanTree.cpp  HuffmanTree.h  LinearList.h  LinkList.cpp  LinkList.h  LinkedList.cpp  LinkedList.h  MinHeap.cpp  MinHeap.h  MultiTree.cpp  MultiTree.h  Queue.cpp  Queue.h  SeqList.cpp  SeqList.h  StringHashMap.cpp  StringHashMap.h  Vector.cpp  Vector.h  head.cpp  head.h
(+140 files in other folders)
