cmake_minimum_required(VERSION 3.15)
project(DataStructure)

set(CMAKE_CPP_STANDARD 17)
set(CMAKE_CXX_FLAGS
        -std=c++11
        )

add_executable(DataStructure
#        main.cpp

#        tests/test.h
#        tests/test1.cpp
#        tests/test2.cpp

#        Homework/H1/Project1.cpp
#        Homework/H2/Project2.cpp
#        Homework/H3/Project3.cpp
#        Homework/H4/Project4.cpp
#        Homework/H5/Project5.cpp
#        Homework/H6/Project6.cpp
#        Homework/H7/Project7.cpp
#        Homework/H8/Project8.cpp
        Homework/H9/Project9.cpp
#        Homework/H10/Project10.cpp

#        MyDS/Vector.cpp
#        MyDS/Vector.h
#        MyDS/BigInteger.cpp
#        MyDS/BigInteger.h
#        MyDS/Queue.cpp
#        MyDS/Queue.h

#        MyDS/MultiTree.cpp
#        MyDS/MultiTree.h
#        MyDS/HashTable.cpp
#        MyDS/HashTable.h
#        MyDS/StringHashMap.cpp
#        MyDS/StringHashMap.h
#        MyDS/HuffmanTree.cpp
#        MyDS/HuffmanTree.h
#        MyDS/MinHeap.cpp
#        MyDS/MinHeap.h
#        Homework/H8/ref.cpp
#        Homework/H9/ref.cpp
#        MyDS/HashMap.cpp
#        MyDS/HashMap.h
        )